[DOCS-3207] Use consistent Order response schema
